Fix Donate, Docs and About page layouts + Add History view to About page + Fix css variables + Prepare for future dark mode

--- a/pmaweb/static/bootstrap/css/modal.css
+++ b/pmaweb/static/bootstrap/css/modal.css
@@ -35,7 +35,7 @@
 }
 .modal-content {
   position: relative;
-  background-color: #ffffff;
+  background-color: var(--background-page);
   background-clip: padding-box;
   border: 1px solid #999999;
   border: 1px solid rgba(0, 0, 0, 0.2);
